--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,22 +1,50 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  background: #000000;
+}
+
+#background {
+  background: #000000 no-repeat center center fixed;
+  background-size: cover;
+  /* Use a blur so we can get away with a lower quality image */
+  filter: blur(3px);
+}
+
+#background.show {
+  width: 100%;
+  height: 100vh;
 }
 
 #content {
+  padding: 20px;
   width: 60%;
   min-width: 200px;
-  margin: 0 auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  margin-top: 20%;
   padding: 10px;
   border-radius: 5px;
   color: #fefefe;
-  background-color: #333;
+  background-color: rgba(0.1, 0.1, 0.1, 0.5);
+  z-index: 10;
+}
+
+#content a {
+  color: #46d6fd;
 }
 
 #content h1 {
   text-align: center;
   font-weight: 400;
-  color: #46d6fd;
+  margin-top: 0;
 }
 
 #signup {
@@ -45,4 +73,16 @@ body {
   padding: 3px;
   margin: 0;
   border: 1px solid white;
+}
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#details {
+  margin-top: 20px;
+  font-size: 80%;
+  text-transform: lowercase;
 }
