--- a/layouts/issue.hbs
+++ b/layouts/issue.hbs
@@ -8,7 +8,15 @@
     <div id="content">
       <h1>Immersive Web Weekly</h1>
       <div class="info">Issue #{{issue}}, {{date}}</div>
-      {{{ contents }}}
+      <p>Preview/subtitle content: {{preview}}</p>
+      {{#each links}}
+          <h2><a href="{{url}}">{{title}}</a></h2>
+          <p>{{content}}</p>
+          <span class="author"><a href="{{authorLink}}">{{author}}</a></span>
+          {{#each tags}}
+             <span class="tag tag-{{this}}">{{this}}</span>
+          {{/each}}
+      {{/each}}
     </div>
   </body>
 </html>
