--- a/layouts/issue.hbs
+++ b/layouts/issue.hbs
@@ -2,22 +2,37 @@
 <html>
   <head>
       <title>Immersive Web Weekly: Issue #{{ issue }}, {{date}}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:url" content="https://immersivewebweekly.com">
+        <meta name="twitter:title" content="Immersive Web Weekly">
+        <meta name="twitter:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+        <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
+        <meta property="og:title" content="Immersive Web Weekly">
+        <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
+        <meta property="og:site_name" content="Immersive Web Weekly">
+        <meta property="og:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+      <link href="https://fonts.googleapis.com/css?family=Fira+Sans:200,300,400" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="../../styles/issue.css" />
   </head>
   <body>
-    <div id="content">
+    <div id="container">
       <h1>Immersive Web Weekly</h1>
       <div class="info">Issue #{{issue}}, {{date}}</div>
-      <p>Preview/subtitle content: {{preview}}</p>
+      <p id="overview">{{overview}} {{#if signed}}<span>– {{signed}}</span>{{/if}}</p>
+      <div id="content">
       {{#each links}}
           <h2><a href="{{url}}">{{title}}</a></h2>
           {{{content}}}
-          <span class="domain"><a href="{{url}}">{{domain}}</a></span>
-          <span class="author"><a href="{{authorLink}}">{{author}}</a></span>
-          {{#each tags}}
-             <span class="tag tag-{{this}}">{{this}}</span>
-          {{/each}}
+          <div class="meta">
+            <span class="domain"><a href="{{url}}">{{domain}}</a></span>
+            <span class="author"><a href="{{authorLink}}">{{author}}</a></span>
+            {{#each tags}}
+              <span class="tag tag-{{this}}">{{this}}</span>
+            {{/each}}
+          </div>
       {{/each}}
+      </div>
     </div>
   </body>
 </html>
