--- a/public/styles/issue.css
+++ b/public/styles/issue.css
@@ -1,58 +1,107 @@
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Fira Sans", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: #3c484e;
+  margin: 0;
+  background-color: #eee;
 }
 
 h1 {
   width: 100%;
   text-align: center;
   text-transform: uppercase;
-  font-weight: 400;
-  background-color: #94d0ff;
+  font-weight: 200;
+  background-color: #0a84ff;
   color: white;
   padding: 15px 0;
+  margin-top: 0px;
   margin-bottom: 0px;
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 22px;
+  font-weight: 300;
+  margin: 25px 0 15px 0;
 }
 
 .info {
-  color: #ad8cff;
-  font-size: 80%;
+  color: #888;
+  font-size: 90%;
+  margin-left: 30px;
 }
 
-#content {
+#overview {
+  font-style: italic;
+  margin: 15px 0px 0px 30px;
+  line-height: 1.5;
+}
+
+#container {
+  background-color: white;
   margin: 0 auto;
   width: 800px;
 }
 
-#content a, #content a:visited {
-  color: #8795e8;
-  text-decoration: none;
+@media screen and (max-width: 800px) {
+  #container {
+    width: 100%;
+  }
 }
 
-.author {
-  font-size: 90%;
-  text-transform: uppercase;
+#container a, #containera:visited {
+  color: #0c0c0d;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 #0a84ff;
+}
+
+
+#content {
+  padding: 0px 30px 20px 30px;
+}
+
+#content p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  line-height: 1.5;
+}
+
+#content .meta {
+  font-size: 80%;
+  color: #3c484e;
+  margin-bottom: 40px;
+}
+.domain::before {
+  content: ' > '
+}
+.domain::after {
+  content: ' | '
+}
+
+#content .meta .author{
   font-weight: 300;
+  text-transform: uppercase;
+}
+.author::before {
+}
+.author::after {
+  content: ' | '
 }
 
 .tag {
-  padding: 0px 3px;
+  font-weight: 300;
+  padding: 0px 6px;
   border-radius: 3px;
-}
-.tag-sponsored {
-  background-color: #ff0077;
+  background-color: #eee;
+  border: 1px solid;
 }
 .tag-tutorial {
-  background-color: #00ff00;
-}
-.tag-announcement {
-  background-color: #ff0077;
+  border-color: #30e60b;
 }
 .tag-article {
-  background-color: #0000ff;
+  border-color: #9400ff;
 }
-.tag-video {
-  background-color: #ffff00;
-}
-.tag-project {
-  background-color: #ffff00;
+.tag-event {
+  border-color: #ff1ad9;
 }
