--- a/layouts/issue.hbs
+++ b/layouts/issue.hbs
@@ -16,23 +16,79 @@
       <link rel="stylesheet" type="text/css" href="../../styles/issue.css" />
   </head>
   <body>
-    <div id="container">
+      <div id="container">
+
       <h1>Immersive Web Weekly</h1>
+
+      <div class="signup-wrapper">
+      <div class="signup">
+        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+
+        <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
+            <div class="field">
+                <label for="mce-EMAIL">Email Address </label>
+                <input type="email" placeholder="Your email" value="" name="EMAIL" class="email">
+            </div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_d8958017f47f03a7a8388f93c_b89ab2d07e" tabindex="-1" value="">
+            </div>
+            <button class="submit" type="submit" value="Subscribe" name="subscribe">Subscribe</button>
+        </form>
+      </div>
+      </div>
+
       <div class="info">Issue #{{issue}}, {{date}}</div>
-      <p id="overview">{{overview}} {{#if signed}}<span>– {{signed}}</span>{{/if}}</p>
+      <div id="overview">
+        {{{overview}}} {{#if signed}}<span>– {{signed}}</span>{{/if}}
+      </div>
       <div id="content">
       {{#each links}}
-          <h2><a href="{{url}}">{{title}}</a></h2>
+          <h2><a href="{{url}}" target="_new">{{title}}</a></h2>
           {{{content}}}
           <div class="meta">
             <span class="domain"><a href="{{url}}">{{domain}}</a></span>
-            <span class="author"><a href="{{authorLink}}">{{author}}</a></span>
+            <span class="author">
+              {{#if authorLink}}
+                <a href="{{authorLink}}">
+              {{/if}}
+              {{author}}
+              {{#if authorLink}}
+                </a>
+              {{/if}}
+            </span>
             {{#each tags}}
               <span class="tag tag-{{this}}">{{this}}</span>
             {{/each}}
           </div>
       {{/each}}
       </div>
+
+      <div class="signup-wrapper">
+      <div class="signup">
+        <p class="signup-info">A weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.</p>
+
+        <form action="https://immersivewebweekly.us18.list-manage.com/subscribe/post?u=d8958017f47f03a7a8388f93c&amp;id=b89ab2d07e" method="post" target="_blank">
+            <div class="field">
+                <label for="mce-EMAIL">Email Address </label>
+                <input type="email" placeholder="Your email" value="" name="EMAIL" class="email">
+            </div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_d8958017f47f03a7a8388f93c_b89ab2d07e" tabindex="-1" value="">
+            </div>
+            <button class="submit" type="submit" value="Subscribe" name="subscribe">Subscribe</button>
+        </form>
+      </div>
+      </div>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119157804-1"></script>
+    <script>
+        if (window.location.hostname === 'immersivewebweekly.com') {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-119157804-1');
+        }
+    </script>
   </body>
 </html>
