--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -39,7 +39,7 @@ body {
 }
 
 #content a {
-  color: #0a84ff;
+  color: #46d6fd;
 }
 
 #content h1 {
@@ -49,7 +49,7 @@ body {
 }
 
 #signup {
-  background-color: #0a84ff;
+  background-color: #46d6fd;
   padding: 10px;
   text-align: center;
 }
@@ -76,7 +76,7 @@ body {
   padding: 3px 10px;
   margin: 0;
   border: 1px solid white;
-  background-color: #9400ff;
+  background-color: #b450ce;
   color: white;
   text-transform: uppercase;
   cursor: pointer;
