--- a/layouts/issue.hbs
+++ b/layouts/issue.hbs
@@ -18,7 +18,7 @@
   <body>
       <div id="container">
 
-      <h1>Immersive Web Weekly</h1>
+      <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
 
       <div class="signup-wrapper">
       <div class="signup">
@@ -37,7 +37,7 @@
       </div>
       </div>
 
-      <div class="info">Issue #{{issue}}, {{date}}</div>
+      <div class="info">Issue #{{issue}}, {{date}}, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
       <div id="overview">
         {{{overview}}} {{#if signed}}<span>– {{signed}}</span>{{/if}}
       </div>
