--- a/public/styles/issue.css
+++ b/public/styles/issue.css
@@ -7,6 +7,12 @@ body {
   background-color: #eee;
 }
 
+a, a:visited {
+  color: #0c0c0d;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 #0a84ff;
+}
+
 h1 {
   width: 100%;
   text-align: center;
@@ -19,6 +25,9 @@ h1 {
   margin-bottom: 0px;
   font-size: 36px;
 }
+#container h1 a {
+  color: white;
+}
 
 h2 {
   font-size: 22px;
@@ -30,6 +39,7 @@ h2 {
   color: #888;
   font-size: 90%;
   margin-left: 30px;
+  margin-top: 10px;
 }
 
 #overview {
@@ -49,13 +59,6 @@ h2 {
     width: 100%;
   }
 }
-
-#container a, #containera:visited {
-  color: #0c0c0d;
-  text-decoration: none;
-  box-shadow: inset 0 -1px 0 #0a84ff;
-}
-
 
 #content {
   padding: 0px 30px 20px 30px;
