--- a/layouts/issue.hbs
+++ b/layouts/issue.hbs
@@ -4,14 +4,16 @@
       <title>Immersive Web Weekly: Issue #{{ issue }}, {{date}}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:url" content="https://immersivewebweekly.com">
-        <meta name="twitter:title" content="Immersive Web Weekly">
-        <meta name="twitter:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+        <meta name="twitter:url" content="https://immersivewebweekly.com/issues/{{issue}}">
+        <meta name="twitter:title" content="Immersive Web Weekly: Issue #{{issue}}, {{date}}">
+        <meta name="twitter:description" content="{{overviewShort}}">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
-        <meta property="og:title" content="Immersive Web Weekly">
+        <meta name="twitter:creator" content="@jsantell">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, {{date}}">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
-        <meta property="og:description" content="Immersive Web Weekly is a weekly newsletter of articles about the world of immersive computing on the web, VR/AR in browsers, and all things WebXR.">
+        <meta property="og:description" content="{{overviewShort}}">
+        <meta property="og:url" content="https://immersivewebweekly.com/issues/{{issue}}">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans:200,300,400" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="../../styles/issue.css" />
   </head>
