allow multiple authors

--- a/layouts/email.hbs
+++ b/layouts/email.hbs
@@ -650,6 +650,7 @@
                                             <span> > </span>
                                             <span class="domain"><a href="{{url}}">{{domain}}</a></span>
                                             <span> | </span>
+                                            {{#each authors}}
                                             <span class="author">
                                                 {{#if authorLink}}
                                                 <a href="{{authorLink}}">
@@ -659,6 +660,7 @@
                                                 </a>
                                                 {{/if}}
                                             </span>
+                                            {{/each}}
                                             {{#each tags}}
                                             <span class="tag tag-{{this}}">{{this}}</span>
                                             {{/each}}
