--- a/public/styles/issue.css
+++ b/public/styles/issue.css
@@ -88,29 +88,36 @@ h2 {
 }
 .author::before {
 }
-/*
+
 .author::after {
-  content: ' | '
+  content: ', ';
 }
-*/
+
+.author:last-of-type::after {
+  content: '';
+}
 
 .tag {
   font-weight: 300;
-  padding: 0px 6px;
+  padding: 1px 6px;
   border-radius: 3px;
   background-color: #eee;
   border: 1px solid;
   text-transform: uppercase;
-  display: none;
+  display: inline;
+  border-color: #999999;
 }
 .tag-tutorial {
-  border-color: #30e60b;
+  border-color: #85ff0a;
 }
-.tag-article {
+.tag-video {
   border-color: #9400ff;
 }
 .tag-event {
-  border-color: #ff1ad9;
+  border-color: #ff0a85;
+}
+.tag-web-platform {
+  border-color: #222222;
 }
 
 .signup-wrapper {
