--- a/layouts/email.hbs
+++ b/layouts/email.hbs
@@ -558,6 +558,30 @@
   font-weight: 300;
   text-transform: uppercase;
 }
+
+.tag {
+  font-weight: 300;
+  padding: 1px 6px;
+  border-radius: 3px;
+  background-color: #eee;
+  border: 1px solid;
+  text-transform: uppercase;
+  display: inline;
+  border-color: #999999;
+}
+.tag-tutorial {
+  border-color: #85ff0a;
+}
+.tag-video {
+  border-color: #9400ff;
+}
+.tag-event {
+  border-color: #ff0a85;
+}
+.tag-web-platform {
+  border-color: #222222;
+}
+
 </style></head>
 
 <body>
@@ -647,6 +671,9 @@
                                         <h2><a href="{{url}}" target="_new">{{title}}</a></h2>
                                         {{{content}}}
                                         <div class="meta">
+                                            {{#each category}}
+                                                <span class="tag tag-{{this}}">{{this}}</span>
+                                            {{/each}}
                                             <span> > </span>
                                             <span class="domain"><a href="{{url}}">{{domain}}</a></span>
                                             <span> | </span>
@@ -660,9 +687,6 @@
                                                 </a>
                                                 {{/if}}
                                             </span>
-                                            {{/each}}
-                                            {{#each tags}}
-                                            <span class="tag tag-{{this}}">{{this}}</span>
                                             {{/each}}
                                         </div>
                                         {{/each}}
