--- a/layouts/email.hbs
+++ b/layouts/email.hbs
@@ -672,7 +672,7 @@
                                         {{{content}}}
                                         <div class="meta">
                                             {{#each category}}
-                                                <span class="tag tag-{{this}}">{{this}}</span>
+                                              <span class="tag tag-{{slug}}">{{category}}</span>
                                             {{/each}}
                                             <span> > </span>
                                             <span class="domain"><a href="{{url}}">{{domain}}</a></span>
