Fix templating error

--- a/layouts/issue.hbs
+++ b/layouts/issue.hbs
@@ -9,7 +9,7 @@
         <meta name="twitter:description" content="{{overviewShort}}">
         <meta name="twitter:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta name="twitter:creator" content="@jsantell">
-        <meta property="og:title" content="Immersive Web Weekly: Issue #{issue}}, {{date}}">
+        <meta property="og:title" content="Immersive Web Weekly: Issue #{{issue}}, {{date}}">
         <meta property="og:image" content="https://immersivewebweekly.com/images/large_image.jpg">
         <meta property="og:site_name" content="Immersive Web Weekly">
         <meta property="og:description" content="{{overviewShort}}">
