--- a/layouts/email.hbs
+++ b/layouts/email.hbs
@@ -668,7 +668,7 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #{{issue}}, {{date}}, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Immersive Web Weekly: <a href="{{permalink}}">Issue #{{issue}}</a>, {{date}}</div>
                                     <div id="overview">
                                         {{{overview}}} {{#if signed}}<span>– {{signed}}</span>{{/if}}
                                     </div>
